5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1811_2569.log
== TEST (2019-06-11 19:30:25) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=0
for i in range(size(n)):
	soma=soma+n[i]
media=soma/zise(n)
print(round(media,3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:31:01) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=0
for i in range(size(n)):
	soma=soma+n[i]
media=soma/size(n)
print(round(media,3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:31:19) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=0
for i in range(size(n)):
	soma=soma+n[i]
media=soma/size(n)
print(round(media,3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:33:20) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=0
d=sqrt((x1-m)**2+(x2-m)**2+(xn-m)**2)
for i in range(size(n)):
	soma=soma+n[i]
media=soma/size(n)
print(round(media,3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:39:28) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(x)
cont=0
media=soma/size(n)
for i in range(n):
	cont=
	
	
-- ERROR:
File "XXXX", line 8
    cont=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:50:13) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(x)
cont=0
media=soma/size(n)
for i in range(n):
	cont = cont + (x - media)**2
	d = sqrt(cont/(size(n)-1))
print(d)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:50:38) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in range(n):
	cont = cont + (x - media)**2
	d = sqrt(cont/(size(n)-1))
print(d)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:51:01) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (x - media)**2
	d = sqrt(cont/(size(n)-1))
print(d)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:51:20) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (n - media)**2
	d = sqrt(cont/(size(n)-1))
print(d)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:02:41) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (i - media)**2
	d = sqrt(cont/(size(n)-1))
print(d)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 15:03:04) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (i - media)**2
	d = sqrt(cont/(size(n)-1))
print(round(d, 3)
	
	
-- EXECUTION TIME:
0.793463
-- ERROR:
  File "/home/codebench/codes/1811/2569/main.py", line 13
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:03:08) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (i - media)**2
	d = sqrt(cont/(size(n)-1))
print(round(d, 3)
	
	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:03:14) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (i - media)**2
	d = sqrt(cont/(size(n)-1))
print(round(d, 3)	
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:03:20) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (i - media)**2
	d = sqrt(cont/(size(n)-1))
print(round(d, 3)	
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:03:24) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (i - media)**2
	d = sqrt(cont/(size(n)-1))
	print(round(d, 3)	
-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:03:37) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (i - media)**2
	d = sqrt(cont/(size(n)-1))
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 15:03:47) 
-- CODE:
from numpy import*
from math import*
n=array(eval(input("digite um vetor de numeros reais: ")))
soma=sum(n)
cont=0
media=soma/size(n)
for i in n:
	cont = cont + (i - media)**2
	d = sqrt(cont/(size(n)-1))
print(round(d, 3))
-- EXECUTION TIME:
0.8085
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
